Overflow X Fix Safari

--- a/assets/css/scss/menu.scss
+++ b/assets/css/scss/menu.scss
@@ -1,7 +1,7 @@
 @import 'basics';
 @import 'menu-dropdown.scss';
 
-body {
+html, body {
     max-width: 100vw;
     margin: 0;
     padding: 0;
